# cryptotax-rust

./: .gitignore  Cargo.toml  CryptoTransactions.csv  LICENSE  README.md  config.ini  test_config.ini
src/: asset.rs  config.rs  import_trades.rs  main.rs  process_trades.rs
src/funcs/: asset.rs  config.rs  import_trades.rs  mod.rs  process_trades.rs  trade.rs  txn_type.rs
tests/: example_transactions.csv  integration_test.rs  test_config.ini
