[package]
name = "cryptotax-rust"
version = "0.1.0"
authors = ["Crypto Carl"]
edition = "2021"
repository = "https://github.com/ckvj/cryptotax-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptotax"
path = "src/lib.rs"

[dependencies]
rust-ini = "0.19.0"
chrono = "0.4.26"
csv = "1.2.2"
serde = "1.0.164"
rust_decimal = "1.30.0"
cli-table = "0.4"
itertools = "0.11.0"